--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-    image: socket-server
+    image: lwaero/socket-server
     ports:
     - 8080:8080
     volumes:
