--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^5.12.0",
     "ws": "^7.4.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/moment-timezone": "^0.5.30",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.34",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
