--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.12.0",
     "ws": "^7.4.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/moment-timezone": "^0.5.30",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.34",
