--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
       "node_modules"
     ],
     "watch": [
-      "src/**/*"
+      "src/**/*.ts*"
     ]
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.33",
     "mongoose": "^5.12.0",
@@ -30,8 +31,8 @@
     "@types/axios": "^0.14.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/moment-timezone": "^0.5.30",
-    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.34",
+    "@types/winston": "^2.4.4",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
