--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,29 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "outDir": "dist",
-    "declaration": true,
-    "declarationDir": "./build",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "strict": true,
     "module": "commonjs",
-    "target": "es5",
     "noUnusedParameters": true,
     "esModuleInterop": true,
-    "lib": ["dom","es2015"]
+    "lib": [
+      "dom",
+      "es2015"
+    ],
+    "declaration": true,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es6",
+    "strictPropertyInitialization": false
   },
+  "include": ["src"],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist",
+    "build"
   ]
 }
