upd: for develop build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,14 @@ services:
       dockerfile: Dockerfile
       context: .
     image: lwaero/socket-server
+    restart: always
     ports:
     - 8080:8080
     volumes:
     - ./src:/app/src
+    - node_modules_ws:/app/src/node_modules
     env_file:
       - .env
+
+volumes:
+  node_modules_ws:
