--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
-    "build": "NODE_ENV=production yarn lint-and-fix && tsc",
+    "build": "yarn lint-and-fix && tsc",
     "start": "node dist/index.js"
   },
   "nodemonConfig": {
