dev: add display on site sync pipe

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # URL to 1c http service endpoint
 BASE_URL=string
-
+# Url to cms
+API_URL=string
 # URL to strapi mongodb instance
 DATABASE_URL=string
